Changed main screen and layout.

--- a/Hotel-Booking-Site.csproj
+++ b/Hotel-Booking-Site.csproj
@@ -161,13 +161,20 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\emblem.png" />
+    <Content Include="Content\homeScreen\ekonomi-aile.jpg" />
+    <Content Include="Content\homeScreen\normal.jpg" />
+    <Content Include="Content\homeScreen\suit.jpg" />
+    <Content Include="Content\homeScreen\tek-kisi.jpg" />
     <Content Include="Content\images\bg-01.jpg" />
     <Content Include="Content\images\email.png" />
+    <Content Include="Content\images\icons\facebook-circular-logo.png" />
     <Content Include="Content\images\hotel1.jpg" />
     <Content Include="Content\images\hotel3.jpg" />
     <Content Include="Content\images\icons\favicon.ico" />
+    <Content Include="Content\images\icons\instagram.png" />
     <Content Include="Content\images\lasvegas.jpg" />
     <Content Include="Content\images\phone-call.png" />
+    <Content Include="Content\images\icons\twitter.png" />
     <Content Include="Content\vendor\animate\animate.css" />
     <Content Include="Content\vendor\animsition\css\animsition.css" />
     <Content Include="Content\vendor\animsition\css\animsition.min.css" />
