--- a/Web.config
+++ b/Web.config
@@ -57,8 +57,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="db_albumlerEntities" connectionString="metadata=res://*/Models.SampleDataModel.csdl|res://*/Models.SampleDataModel.ssdl|res://*/Models.SampleDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-CMFM3SG;initial catalog=db_albumler;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="My_HotelEntities" connectionString="metadata=res://*/Models.Hotel-Model.csdl|res://*/Models.Hotel-Model.ssdl|res://*/Models.Hotel-Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-CMFM3SG;initial catalog=My_Hotel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
