Oda and Odeme tables are changed.

--- a/Hotel-Booking-Site.csproj
+++ b/Hotel-Booking-Site.csproj
@@ -170,6 +170,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\emblem.png" />
     <Content Include="Content\homeScreen\ekonomi-aile.jpg" />
+    <Content Include="Content\homeScreen\hotel-rez.jpg" />
     <Content Include="Content\homeScreen\normal.jpg" />
     <Content Include="Content\homeScreen\suit.jpg" />
     <Content Include="Content\homeScreen\tek-kisi.jpg" />
